--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,7 +3,7 @@
 # Only use spaces to indent your .yml configuration.
 # -----
 # You can specify a custom docker image from Docker Hub as your build environment.
-image: node:6.9.4
+image: node:8.4.0
 
 pipelines:
   default:
@@ -12,4 +12,15 @@ pipelines:
           - node
         script: # Modify the commands below to build your repository.
           - npm install
-          - npm test
+          - npm install apify-cli -g
+          - apify login --token $APIFY_TOKEN
+    branches:
+        master:
+          - step:
+              script:
+                - apify push --build-tag latest
+        develop:
+          - step:
+              script:
+                - apify push --build-tag beta
+
