--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "Crawl a number of web pages using headless Chrome and Puppeteer",
 	"main": "main.js",
 	"dependencies": {
-		"apify": "^0.5.13"
+		"apify": "^0.5.34",
+		"wappalyzer": "^5.4.15"
 	},
 	"devDependencies": {},
 	"scripts": {
